--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,20 @@
 @import url(https://fonts.googleapis.com/css2?family=Fira+Sans);
 @import url(https://fonts.googleapis.com/css2?family=Inter);
+@import url(animation.css);
 
 ::-webkit-scrollbar {
     width: 0;
     height: 0;
-}
+} 
 
 *{
+    color: #ffffff;
     padding: 0;
     margin: 0;
 }
 
 html{
+    position: relative;
     overflow-x: hidden;
     padding: 0;
     margin: 0;
@@ -22,7 +25,7 @@ html{
 }
 
 body{
-    background-color: #303031;
+    background-color: #000;
     width: 100%;
 }
 
@@ -54,14 +57,18 @@ body{
     color: #ffffff;
     text-decoration: none;
     font-size: 1.5rem;
-}
+}   
 
 .navbox:hover{
-    background-color: azure;
+    background-color: rgb(167, 167, 167);
 }
 
 .navbox:hover a{
     color: #303031;
+}
+
+.navbox_active{
+    background-color: rgb(107, 107, 107);
 }
 
 .image_container{
@@ -71,6 +78,7 @@ body{
 }
 
 #self-images{
+    width: 100%;
     overflow: hidden;
     font-size: 0;
     display: flex;
@@ -87,7 +95,82 @@ body{
     object-fit: cover;
 }
 
-#introduction{
+#home{
     height: calc(100dvh - 8dvh);
     width: 100%;
+}
+
+#introduction,
+#skill,
+#experience,
+#education,
+#contact{
+    height: calc(100dvh - 8dvh);
+    width: 100%;
+    padding-top: 8dvh;
+}
+
+.introduction_container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: minmax(0, 1.3fr) minmax(0, 1fr);
+    align-items: center;
+    justify-content: center;
+}
+
+.info_box_introduction{
+    padding-left: 7vw;
+}
+
+.info_box_introduction h1{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.info_box_introduction h1 span{
+    background-image: linear-gradient(45deg, #1000a5, #390165);
+    background-clip: text;
+    color: hsl(0 0% 100% /0.2);
+    font-size: 5.6rem;
+    font-weight: 1000;
+}
+
+.info_box_introduction p{
+    text-align: left;
+    line-height: 2.5rem;
+    font-size: 1.7rem;
+    font-weight: 500;
+}
+
+.info_box_introduction p a{
+    font-weight: 700;
+    text-decoration: none;
+    color: rgb(255, 70, 18);
+}
+
+.info_box_introduction p a:hover{
+    text-decoration: underline;
+}
+
+.info_box_introduction p span{
+    color: #54a4d3;
+    font-weight: 900;
+}
+
+.static_profile{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.static_profile img{
+    width: 36vw;
+    height: 36vw;
+    border-radius: 50%;
+    object-fit: cover;
 }
