--- a/animation.css
+++ b/animation.css
@@ -1,3 +1,17 @@
-@keyframes textColorChanging {
-    
+@keyframes move_in {
+    0%{
+        transform: translateX(100vw);
+    }
+    100%{
+        transform: translateX(0vw);
+    }
+}
+
+@keyframes move_out {
+    0%{
+        transform: translateX(0vw);
+    }
+    100%{
+        transform: translateX(100vw);
+    }
 }
