--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,6 +21,7 @@ html{
     font-family: 'Fira Sans', 'Inter';
     font-size: 1vw;
     scroll-behavior: smooth;
+    scroll-padding-top: 8dvh; 
     box-sizing: border-box;
 }
 
@@ -35,7 +36,7 @@ body{
     z-index: 10;
     width: 100%;
     display: flex;
-    height: 8dvh;
+    height: 8.2dvh;
     align-items: center;
     justify-content: center;
     background: radial-gradient(circle, #141415, #1E1E1F);
@@ -95,24 +96,17 @@ body{
     object-fit: cover;
 }
 
-#home{
-    height: calc(100dvh - 8dvh);
-    width: 100%;
-}
-
+#home,
 #introduction,
 #skill,
 #experience,
 #education,
 #contact{
     height: calc(100dvh - 8dvh);
-    width: 100%;
-    padding-top: 8dvh;
 }
 
 .introduction_container{
     position: relative;
-    width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: minmax(0, 1.3fr) minmax(0, 1fr);
@@ -161,8 +155,6 @@ body{
 
 .static_profile{
     position: relative;
-    width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -173,4 +165,53 @@ body{
     height: 36vw;
     border-radius: 50%;
     object-fit: cover;
+    box-shadow: 0 0 3vw 0.5vw rgba(92, 236, 255, 0.5);
+}
+
+.skill_container{
+    padding-inline: 5dvw;
+    padding-block: 10dvh; ;  
+    display: grid;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+    align-items: center;
+    justify-content: center;
+}
+
+.skill_container h1{
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.soft_skill_box,
+.technical_skill_box{
+    height: calc(70dvh - 5rem);
+    border: 2px transparent;
+    background-color: white;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+}
+
+.soft_skill_box h2,
+.technical_skill_box h2{
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+    color: #000;
+}
+
+.technical_skill_box{
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-left: hsla(0, 0%, 0%, 0.3) solid 2px;
+}
+
+.soft_skill_box{
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-right: hsla(0, 0%, 0%, 0.3) solid 2px;
 }
